--- a/src/App.css
+++ b/src/App.css
@@ -10,24 +10,22 @@
 .toggle {
     background-color: #87BCE8;
     color: #fff;
-    font-size: 24px;
+    padding: 0;
 }
 
 .menu {
     background-color: #fff;
+    margin-top: 11px;
 }
 
 .img {
     height: 2.5rem;
-    margin-left: 5px;
-}
-
-.toggle {
-    padding: 0;
+    margin-top: -10px;
 }
 
 .trigger {
     font-size: 32px;
+    padding-left: 20px;
 }
 
 .sidebar {
@@ -37,6 +35,15 @@
 
 /* dashboard */
 
+.content {
+    background: #f0f0f0;
+    padding: 0 30px 20px;
+}
+
+.breadcrumb {
+    margin: 16px 0;
+}
+
 .background {
     background: #FFFFFF;
     padding: 24px;
@@ -45,66 +52,83 @@
 
 .card {
     width: 200px;
-    height: 150px;
+    height: 200px;
     text-align: center;
     top: 50px;
-    left: 60px;
 }
 
 .bigNumbers {
     font-size: 40px;
 }
 
-
-/* @media only screen and (min-width: 720px) {
-    .background {
-        background: #FFFFFF;
-        min-height: 580px;
-    }
+@media only screen and (max-width: 768px) {
     .ant-row {
         display: grid;
         align-items: center;
-        margin-top: -30px;
+        margin-top: -20px;
     }
     .card {
         width: 150px;
         height: 110px;
         margin-bottom: 20px;
-        left: 1px;
+        left: 54px;
+        transform: translate(-35%, -20%);
     }
     .bigNumbers {
         font-size: 20px;
         margin-top: 0;
     }
+    .trigger {
+        font-size: 24px;
+        margin-left: -15px;
+    }
 }
- */
 
-
-/* @media only screen and (max-width: 720px) {
-    .background {
-        background: #FFFFFF;
-        min-height: 580px;
-    }
-    .ant-row {
-        display: grid;
-        align-items: center;
-        margin-top: -30px;
-    }
+@media only screen and (min-width: 375px) {
     .card {
-        width: 150px;
-        height: 110px;
-        margin-bottom: 20px;
-        left: 1px;
+        left: 70px;
     }
-    .bigNumbers {
-        font-size: 20px;
-        margin-top: 0;
-    }
-} */
-
-
-/* 
 }
 
+@media only screen and (min-width: 425px) {
+    .card {
+        width: 170px;
+        height: 140px;
+        left: 90px;
+    }
 }
-*/
+
+@media only screen and (min-width: 768px) {
+    .card {
+        width: 200px;
+        height: 150px;
+        left: 260px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .card {
+        width: 190px;
+        height: 170px;
+        left: 13px;
+        margin-top: 130px;
+    }
+}
+
+@media only screen and (min-width:1366px) {
+    .card {
+        width: 200px;
+        height: 170px;
+        left: 40px;
+        margin-top: 130px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .card {
+        width: 200px;
+        height: 200px;
+        left: 45px;
+        margin-top: 150px;
+    }
+}
